[package]
name = "log_err"
version = "1.1.1"
authors = ["Kartavya Vashishtha <kartavya0703@gmail.com>"]
edition = "2018"
license = "Unlicense"
description = "Log error messages from Unwrap and Expect with log crate"
repository = "https://github.com/DesmondWillowbrook/rs-log_err"
categories = ["rust-patterns"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4.*"

[dev-dependencies]
simplelog = "^0.10.*"